Bigscreen support, stylesheet improved, fixed showing of active Demo title in header

--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,8 @@
     	<button class="back"></button>
 
 		<h1>Firefox OS AppSkeleton</h1>
-		<h2>webapi</h2>
-    	<h3>Geolocation</h3>
+		<h2 class="sub group"></h2>
+    	<h3 class="sub title"></h3>
 	</header>
 
 	<main>
